# kampher

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260716_c9bb26f7a23b_init.py  20260718_a41f09d2c3e1_add_lobsters_source.py  20260718_b52e17f3d4a2_add_devto_source.py  20260720_d63f7b8210ce_add_tech_polls.py
backend/app/ai/: opportunity.py  report.py  scoring.py
backend/app/ai/embeddings/: base.py  fastembed_provider.py  local.py
backend/app/ai/llm/: anthropic_client.py  base.py  client.py  gemini_client.py
backend/app/api/: deps.py  main.py
backend/app/collectors/: base.py  rate_limit.py  registry.py  schema.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  text.py
backend/app/db/: base.py  seed.py  seed_tech_polls.py  session.py
backend/app/graph/: service.py
backend/app/models/: __init__.py  content.py  entities.py  enums.py  graph.py  intelligence.py  polls.py  taxonomy.py
backend/app/repositories/: entities.py  ingestion.py  intelligence.py
backend/app/schemas/: api.py
backend/app/services/: chat.py  clustering.py  embedding.py  enrichment.py  ingestion.py  opportunity_engine.py  report.py  search.py  trend.py
backend/app/vector/: store.py
backend/app/workers/: celery_app.py  run_once.py
backend/tests/: conftest.py  test_chat.py  test_collectors.py  test_llm_client.py  test_pipeline.py  test_rate_limit.py  test_scoring.py  test_signals_and_search.py
docs/: ARCHITECTURE.md  (+1 more)
(+68 files in other folders)
