[project]
name = "kampher"
version = "0.1.0"
description = "Kampher — AI-powered opportunity intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "qdrant-client>=1.12",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "tenacity>=9.0",
    "lingua-language-detector>=2.0",
    "fastembed>=0.4",
    "numpy>=1.26",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ASYNC"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is idiomatic
    # FastAPI and Pydantic inspect several annotations at runtime. Keeping these
    # imports available is safer than moving them behind TYPE_CHECKING.
    "TC001",
    "TC002",
    "TC003",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false  # celery decorators are untyped

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
